--- a/home.html
+++ b/home.html
@@ -45,6 +45,13 @@
     		</div>
     	</div>
     </nav>
+    <div class="jumbotron">
+    	<div class="container">
+    		<h1>Explore NSW</h1>
+    		<br>
+    		<p><a class="btn btn-primary btn-lg" href="#" role="button">Search »</a> <a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
+    	</div>
+    </div>
     <h1>Hello, world!</h1>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
