--- a/home.html
+++ b/home.html
@@ -32,15 +32,10 @@
     		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     			<ul class="nav navbar-nav navbar-right">
     				<li><a href="#">Home</a></li>
-    				<li class="dropdown">
-    					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Services<span class="caret"></span></a>
-    					<ul class="dropdown-menu">
-    						<li><a href="#">Design</a></li>
-    						<li><a href="#">Development</a></li>
-    						<li><a href="#">Consulting</a></li>
-    					</ul>
-    				</li>
-    				<li><a href="#">Contact</a></li>
+                    <li><a href="#">Campsite Search</a></li>
+                    <li><a href="#">Popular Campsites</a></li>
+                    <li><a href="#">Equipment</a></li>
+                    <li><a href="#">Guides</a></li>
     			</ul>
     		</div>
     	</div>
