added new pages

--- a/home.html
+++ b/home.html
@@ -31,11 +31,11 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Campsite Search</a></li>
-                    <li><a href="#">Popular Campsites</a></li>
-                    <li><a href="#">Equipment</a></li>
-                    <li><a href="#">Guides</a></li>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="campsearch.html">Campsite Search</a></li>
+                    <li><a href="popularcampsite.html">Popular Campsites</a></li>
+                    <li><a href="equipment.html">Equipment</a></li>
+                    <li><a href="guides.html">Guides</a></li>
                 </ul>
             </div>
         </div>
