--- a/home.html
+++ b/home.html
@@ -42,7 +42,12 @@
     </nav>
     <div class="jumbotron">
         <div class="container">
-            <h1>Explore NSW</h1>
+            <div class="input-group">
+                <span class="input-group-btn">
+                    <button class="btn btn-default" type="button">Search</button>
+                </span>
+                <input type="text" class="form-control" placeholder="Address">
+            </div><!-- /input-group -->
             <br>
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Search »</a> <a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
         </div>
