--- a/campsearch.html
+++ b/campsearch.html
@@ -43,6 +43,15 @@
     </nav>
     
     <h1>Campsite search</h1>
+    <p>
+        <iframe
+        
+            width=80%;
+            frameborder="0" style="border:0"
+            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCCdRrm6ve_saj1HGgZ8v2oiO4NtdSLRnI
+            &q=Space+Needle,Seattle+WA" allowfullscreen>
+        </iframe>
+    </p>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
