--- a/home.html
+++ b/home.html
@@ -42,15 +42,20 @@
     </nav>
     <div class="jumbotron">
         <div class="container">
-            <div class="input-group">
-                <span class="input-group-btn">
-                    <button class="btn btn-default" type="button">Search</button>
-                </span>
-                <input type="text" class="form-control" placeholder="Address">
-            </div><!-- /input-group -->
+            <div class="row">
+                <div class="col-lg-2"></div>
+                <div class="col-lg-8">
+                    <div class="input-group input-group-lg">
+                        <input type="text" class="form-control" placeholder="Address">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search" aria-hidden="true"</span></button>
+                        </span>
+                    </div><!-- /input-group -->
+                </div>
+                <div class="col-lg-2"></div>
+            </div>
             <br>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Search »</a> <a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
-        </div>
+            </div>
     </div>
     <h1>Hello, world!</h1>
 
