--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
     </nav>
     <div class="jumbotron">
         <div class="container">
-            <div class="row">
+            <div class="row vcenter">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8">
                     <div class="input-group input-group-lg">
@@ -54,8 +54,7 @@
                 </div>
                 <div class="col-lg-2"></div>
             </div>
-            <br>
-            </div>
+        </div>
     </div>
     <h1>Hello, world!</h1>
 
