--- a/campsearch.html
+++ b/campsearch.html
@@ -10,6 +10,12 @@
 
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/custom.css" rel="stylesheet">
+        <!-- putting illegal styling here for debugging-->
+        <style>
+            #map {
+            height: 100%;
+        }
+        </style>
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -42,11 +48,13 @@
     </nav>
 
     <h1>Campsite search</h1>
-        <div class="container" id="map"></div>
+    <p>
+        <div id="map"></div>
         <script src="js/campsearch.js"></script>
         <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDydgd2jbeRErhSowqagqkqVqARAPUieAw&callback=initMap">
         </script>
+    </p>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
