--- a/campsearch.html
+++ b/campsearch.html
@@ -13,7 +13,8 @@
         <!-- putting illegal styling here for debugging-->
         <style>
             #map {
-            height: 100%;
+            height: 80%;
+            width: 70%;
         }
         </style>
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
