some animation, wow so cool

--- a/campsearch.html
+++ b/campsearch.html
@@ -15,7 +15,24 @@
             #map {
             height: 80%;
             width: 70%;
-        }
+            }
+            input[type=text] {
+            width: 130px;
+            box-sizing: border-box;
+            border: 2px solid #ccc;
+            border-radius: 4px;
+            font-size: 16px;
+            background-color: white;
+            background-image: url('searchicon.png');
+            background-position: 10px 10px;
+            background-repeat: no-repeat;
+            padding: 12px 20px 12px 40px;
+            -webkit-transition: width 0.4s ease-in-out;
+            transition: width 0.4s ease-in-out;
+            }
+            input[type=text]:focus {
+            width: 40%;
+            }
         </style>
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -49,6 +66,11 @@
     </nav>
 
     <h1>Campsite search</h1>
+    <!-- current put it here-->
+    <form>
+        <input type="text" name="search" placeholder="Search..">
+    </form>
+
     <p>
         <div id="map"></div>
         <script src="js/campsearch.js"></script>
