--- a/home.html
+++ b/home.html
@@ -46,10 +46,10 @@
             <div class="row vcenter">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8">
-                    <div class="input-group input-group-lg">
-                        <input type="text" class="form-control" placeholder="Address">
+                    <div class="input-group input-group-xlg">
+                        <input type="text" class="form-control input-xlg" placeholder="Address">
                         <span class="input-group-btn">
-                            <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search" aria-hidden="true"</span></button>
+                            <button class="btn btn-default btn-xlg" type="button"><span class="glyphicon glyphicon-search" aria-hidden="true"</span></button>
                         </span>
                     </div><!-- /input-group -->
                 </div>
