--- a/campsearch.html
+++ b/campsearch.html
@@ -23,7 +23,7 @@
             border-radius: 4px;
             font-size: 16px;
             background-color: white;
-            background-image: url('searchicon.png');
+            background-image: url('icons/searchicon.png');
             background-position: 10px 10px;
             background-repeat: no-repeat;
             padding: 12px 20px 12px 40px;
