passing through html to js success

--- a/campsearch.html
+++ b/campsearch.html
@@ -66,10 +66,14 @@
     </nav>
 
     <h1>Campsite search</h1>
-    <!-- current put it here-->
-    <form>
-        <input type="text" name="search" placeholder="Search..">
-    </form>
+    <!-- search value -->
+
+    <input type="text" name="searchvalue" id='value' />
+    <input type="button" value="submit" onclick="search()" />
+        
+    <script src="js/campsearch.js"></script>
+    <!--testing for passing values through search function-->
+
 
     <p>
         <div id="map"></div>
