--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="home.html"><span><img alt="Explore NSW" src="img/tent.png" id="logo"/></span> Explore NSW</a>
+                <a class="navbar-brand" href="home.html"><span><img alt="Explore NSW" src="img/tent.png" id="logo"/></span>Explore NSW</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
@@ -46,10 +46,10 @@
             <div class="row vcenter">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8">
-                    <div class="input-group input-group-lg">
-                        <input type="text" class="form-control" placeholder="Address">
+                    <div class="input-group input-group-xlg">
+                        <input type="text" class="form-control input-xlg" placeholder="Address">
                         <span class="input-group-btn">
-                            <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search" aria-hidden="true"</span></button>
+                            <button class="btn btn-default btn-xlg" type="button"><span class="glyphicon glyphicon-search" aria-hidden="true"</span></button>
                         </span>
                     </div><!-- /input-group -->
                 </div>
