--- a/home.html
+++ b/home.html
@@ -28,9 +28,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="home.html"><span><img alt="Explore NSW" src="img/tent.png" id="logo"/></span>Explore NSW</a>
+                <a class="navbar-brand" href="home.html"><span><img alt="Explore NSW" src="img/tent.png" id="logo" onmouseover="this.src='img/tent_white.png';" onmouseout="this.src='img/tent.png';"/></span>Explore NSW</a>
             </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="home.html">Home</a></li>
                     <li><a href="campsearch.html">Campsite Search</a></li>
