--- a/campsearch.html
+++ b/campsearch.html
@@ -53,15 +53,17 @@
 
     <h1>Campsite search</h1>
     <!-- search value -->
-    <input type="text" name="searchvalue" id='value' />
-    <select name="distance" id="distval">
-      <option value="" disabled selected>Distance</option>
-      <option value="50">50km</option>
-      <option value="100">100km</option>
-      <option value="200">200km</option>
-      <option value="500">500km</option>
-    </select>
-    <input type="button" value="submit" onclick="search()" />
+
+        <input type="text" name="searchvalue" id='value' />
+        <select name="distance" id="distval">
+            <option value="" disabled selected>Distance</option>
+            <option value="50">50km</option>
+            <option value="100">100km</option>
+            <option value="200">200km</option>
+            <option value="500">500km</option>
+        </select>
+        <input type="checkbox" name="nearby" id="checkednearby" value="1">Nearby Me</input>
+        <input type="button" value="submit" onclick="search()" />
 
     <!--testing for passing values through search function-->
 
@@ -72,6 +74,12 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDydgd2jbeRErhSowqagqkqVqARAPUieAw&callback=initMap">
         </script>
     </p>
+
+    <p>
+        <div id="map2" />
+    </p>
+
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
