--- a/campsearch.html
+++ b/campsearch.html
@@ -71,7 +71,7 @@
         <div id="map"></div>
         <script src="js/campsearch.js"></script>
         <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDydgd2jbeRErhSowqagqkqVqARAPUieAw&callback=initMap">
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDydgd2jbeRErhSowqagqkqVqARAPUieAw&libraries=places&callback=initMap" async defer></script>
         </script>
     </p>
 
