--- a/campsearch.html
+++ b/campsearch.html
@@ -63,7 +63,9 @@
             <option value="500">500km</option>
         </select>
         <input type="checkbox" name="nearby" id="checkednearby" value="1">Nearby Me</input>
-        <input type="button" value="submit" onclick="search()" />
+        <input class="btn btn-default" type="button" value="Submit" onclick="search()">
+        <input id="hide-markers" class="btn btn-default" type="button" value="Hide Markers">
+        <input id="show-markers" class="btn btn-default" type="button" value="Show Markers">
 
     <!--testing for passing values through search function-->
 
