styling all pages

--- a/guides.html
+++ b/guides.html
@@ -1,4 +1,3 @@
-<!--guides html page-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -6,10 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Home</title>
+        <title>Guides</title>
 
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/custom.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans|Raleway|Roboto" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -20,29 +20,30 @@
     </head>
     <body>
     <nav class="navbar navbar-inverse navbar-static-top">
-    	<div class="container">
-    		<div class="navbar-header">
-    			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-    				<span class="sr-only">Toggle navigation</span>
-    				<span class="icon-bar"></span>
-    				<span class="icon-bar"></span>
-    				<span class="icon-bar"></span>
-    			</button>
-    			<a class="navbar-brand" href="/home.html">Explore NSW</a>
-    		</div>
-    		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    			<ul class="nav navbar-nav navbar-right">
-    				<li><a href="home.html">Home</a></li>
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <div class="navbar-brand"><span>
+                    <a href="home.html"><img alt="Explore NSW" src="img/tent.png" id="logo" onmouseover="this.src='img/tent_white.png';" onmouseout="this.src='img/tent.png';"/></a></span>Explore NSW</div>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="home.html">Home</a></li>
                     <li><a href="campsearch.html">Campsite Search</a></li>
                     <li><a href="popularcampsite.html">Popular Campsites</a></li>
                     <li><a href="equipment.html">Equipment</a></li>
                     <li><a href="guides.html">Guides</a></li>
-    			</ul>
-    		</div>
-    	</div>
+                </ul>
+            </div>
+        </div>
     </nav>
-    
-    <h1>Campsite search</h1>
+
+    <h1>Camping Guides</h1>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
