--- a/campsearch.html
+++ b/campsearch.html
@@ -1,4 +1,3 @@
-<!-- this is the campsite search page -->
 <!DOCTYPE html>
 <html lang="en" class="campsearch">
     <head>
@@ -10,16 +9,8 @@
 
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/custom.css" rel="stylesheet">
-        <!-- putting illegal styling here for debugging-->
-        <style>
-            #map {
-            height: 80%;
-            width: 70%;
-            }
-            input[type=text]:focus {
-            width: 40%;
-            }
-        </style>
+        <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans|Raleway|Roboto" rel="stylesheet">
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -29,26 +20,27 @@
     </head>
     <body class="campsearch">
     <nav class="navbar navbar-inverse navbar-static-top">
-    	<div class="container">
-    		<div class="navbar-header">
-    			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-    				<span class="sr-only">Toggle navigation</span>
-    				<span class="icon-bar"></span>
-    				<span class="icon-bar"></span>
-    				<span class="icon-bar"></span>
-    			</button>
-    			<a class="navbar-brand" href="/home.html">Explore NSW</a>
-    		</div>
-    		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    			<ul class="nav navbar-nav navbar-right">
-    				<li><a href="home.html">Home</a></li>
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <div class="navbar-brand"><span>
+                    <a href="home.html"><img alt="Explore NSW" src="img/tent.png" id="logo" onmouseover="this.src='img/tent_white.png';" onmouseout="this.src='img/tent.png';"/></a></span>Explore NSW</div>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="home.html">Home</a></li>
                     <li><a href="campsearch.html">Campsite Search</a></li>
                     <li><a href="popularcampsite.html">Popular Campsites</a></li>
                     <li><a href="equipment.html">Equipment</a></li>
                     <li><a href="guides.html">Guides</a></li>
-    			</ul>
-    		</div>
-    	</div>
+                </ul>
+            </div>
+        </div>
     </nav>
 
     <h1>Campsite search</h1>
@@ -77,9 +69,7 @@
         </script>
     </p>
 
-    <p>
-        <div id="map2" />
-    </p>
+    <h1>TEST</h1>
 
 
 
