--- a/equipment.html
+++ b/equipment.html
@@ -11,6 +11,13 @@
         <link href="css/custom.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans|Raleway|Roboto" rel="stylesheet">
 
+        <!--some dirty style to be placed somewhere else later-->
+        <style>
+            .blockimg {
+                display: inline-block;
+            }
+        </style>
+
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -44,6 +51,27 @@
     </nav>
 
     <h1>Browse Equipment</h1>
+    <!-- insert some fancy theme here-->
+    <ul>
+        <img src="img/singletent.jpg" height="180" width="180">
+        <h3>Single Tents</h3>
+
+        <img src="img/4tent.jpeg" height="180" width="180">
+        <h3>4 Person Tents</h3>
+
+        <img src="img/waterbottle.jpeg" height="180" width="180">
+        <h3>Hydration</h3>
+
+        <img src="img/chair.jpg" height="180" width="180">
+        <h3>Chairs</h3>
+
+        <img src="img/cooking.jpeg" height="180" width="180">
+        <h3>Cooking Utensils</h3>
+
+        <img src="img/bag.jpg" height="180" width="180">
+        <h3>Sleeping Bags</h3>
+
+    </ul>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
