--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
         <![endif]-->
     </head>
     <body ng-controller="MainController">
-    <nav class="navbar navbar-inverse navbar-static-top">
+    <nav class="navbar navbar-inverse navbar-static-top" ng-controller="NavController">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -38,11 +38,7 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="campsearch.html">{{message}}</a></li>
-                    <li><a href="popularcampsite.html">Popular Campsites</a></li>
-                    <li><a href="equipment.html">Equipment</a></li>
-                    <li><a href="guides.html">Guides</a></li>
+                    <li ng-repeat="nav in navs"><a href={{nav.link}}>{{nav.title}}</a></li>
                 </ul>
             </div>
         </div>
