--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
         <script src="js/angular-simple-logger.js"></script>
         <script src="js/lodash.core.min.js"></script>
         <script src="js/angular-google-maps.min.js"></script>
-        <script src="js/MainController.js"></script>
+        <script src="js/mainApp.js"></script>
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
