--- a/home.html
+++ b/home.html
@@ -1,48 +1,33 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="main">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Home</title>
+<html lang="en" ng-app="mainApp">
 
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/custom.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans|Raleway|Roboto" rel="stylesheet">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Home</title>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-        <script src="js/angular-simple-logger.js"></script>
-        <script src="js/lodash.core.min.js"></script>
-        <script src="js/angular-google-maps.min.js"></script>
-        <script src="js/mainApp.js"></script>
-        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Open+Sans|Raleway|Roboto" rel="stylesheet">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+    <script src="js/angular-simple-logger.js"></script>
+    <script src="js/lodash.core.min.js"></script>
+    <script src="js/angular-google-maps.min.js"></script>
+    <script src="js/mainApp.js"></script>
+    <script src="js/site-navbar.component.js"></script>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-    </head>
-    <body ng-controller="MainController">
-    <nav class="navbar navbar-inverse navbar-static-top" ng-controller="NavController">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <div class="navbar-brand"><span>
-                    <a href="home.html"><img alt="Explore NSW" src="img/tent.png" id="logo" onmouseover="this.src='img/tent_white.png';" onmouseout="this.src='img/tent.png';"/></a></span>Explore NSW</div>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li ng-repeat="nav in navs"><a href={{nav.link}}>{{nav.title}}</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+</head>
+
+<body>
+    <site-navbar></site-navbar>
     <div class="jumbotron">
         <div class="container">
             <div class="row vcenter">
@@ -54,13 +39,13 @@
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8">
-                    {{ location }}
                     <div class="input-group input-group-xlg">
                         <input type="text" required class="form-control input-xlg" placeholder="Address" ng-model="location">
                         <span class="input-group-btn">
-                            <button class="btn btn-default btn-xlg" type="button" ng-click="campsiteSearch(location)"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+                                <button class="btn btn-default btn-xlg" type="button" ng-click="campsiteSearch(location)"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
                         </span>
-                    </div><!-- /input-group -->
+                    </div>
+                    <!-- /input-group -->
                 </div>
                 <div class="col-lg-2"></div>
             </div>
@@ -70,5 +55,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-  </body>
+</body>
+
 </html>
