--- a/home.html
+++ b/home.html
@@ -16,8 +16,9 @@
     <script src="js/angular-simple-logger.js"></script>
     <script src="js/lodash.core.min.js"></script>
     <script src="js/angular-google-maps.min.js"></script>
-    <script src="js/mainApp.js"></script>
-    <script src="js/site-navbar.component.js"></script>
+    <script src="js/app.module.js"></script>
+    <script src="js/site-navbar/site-navbar.module.js"></script>
+    <script src="js/site-navbar/site-navbar.component.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
