--- a/public/js/home-search/home-search.template.html
+++ b/public/js/home-search/home-search.template.html
@@ -2,7 +2,7 @@
     <div class="col-lg-2"></div>
     <div class="col-lg-8">
         <div class="input-group input-group-xlg">
-            <input type="text" required class="form-control input-xlg" placeholder="Address" ng-model="$ctrl.location">
+            <input id="location" type="text" required class="form-control input-xlg" placeholder="Address" ng-model="$ctrl.location">
             <div class="input-group-btn">
                 <button class="btn btn-default btn-xlg btn-xlg-magnify" type="button" ng-click="$ctrl.campsiteSearch()"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
                 <button class="btn btn-default btn-xlg btn-xlg-magnify" type="button" ng-click="$ctrl.nearbySearch()"><span class="glyphicon" aria-hidden="true"><img class="nearby-icon" src="/img/nearby-icon.png"></img></span></button>
